@@ -7,6 +7,8 @@ CHANGES
 
 - Pyramid view registration refactored
 
+- PageletType refactored, not pageletType is just string
+
 - Allow to use pyramidView to decorate functions
 
 - Added concept of view layers
